repo cleanup